--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
   <header id="top">
     <h1>Prework Study Guide</h1>
-    <img src="./assets/example.jpg" alt="Profile image of cat wearing a bow tie." />
+    <img src="./assets/Example.jpg" alt="Profile image of Vegito Dragonball Z Concept Art." />
+    <h2>✨ Open the Console to See What's Happening ✨</h2>
   </header>
   <main>
     <section class="card" id="html-section">
@@ -52,6 +53,7 @@
   <footer>
     <p>I can code!</p>
   </footer>
+  <script src="./assets/script.js"></script>
 </body>
 
 </html>
